add method for liner

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,8 @@
 table {
   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-  text-align: left;
   border-collapse: collapse;
-  border-spacing: 5px;
-  background: #000000;
-  color: #000000;
-  border: 10px solid #ECE9E0;
-  border-radius: 20px;
+  border: 25px solid #a1abb3;
+  border-radius: 30px;
   }
 
   td {
@@ -30,5 +26,5 @@ table {
   }
 
   td.red {
-    background: rgb(184, 149, 149);
+    background: rgb(222, 228, 143);
   }
