--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
-table {
-  border: 25px solid #00000000;
+  table.board {
+    border: 25px solid #00000000;
   }
 
-  td {
-  padding: 10px;
-  width: 45px;
-  height: 45px;
-  text-align: center;
-  font-size: 40px;
+  .board td {
+    padding: 10px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    font-size: 40px;
   }
 
   td.black{
